tests/parser/parse-match.4.bad.error
error: Malformed match branch
  --> test:6:4
   |
 6 |      (x y . z)))
   |      ^^^^^^^^^ unexpected dotted list
