tests/parser/parse-match.4.bad.coalton
;; BAD: Parse Match
(package test-package)

(define f
  (match x
    (x y . z)))
